# birthday-bot

./: .env  .gitignore  Cargo.toml  README.md  birthdays.db  dockerfile
.sqlx/: query-30bae19125491578b83391aacdec8053fff34ed7ed82493aa9de86aee89eeb13.json  query-69bea3e04412f4a3be7d248e5512a9ce3789cacf1d4873dd93d871b7c9bd394d.json  query-ca2da2b2e775460475e07ab88c756fb2737db218b53c150cedf19dc03e7114c2.json
migrations/: 20231002132938_birthdays.sql
src/: config.rs  discord.rs  event_handler.rs  main.rs  reminders.rs  storage.rs
src/commands/: add_birthday.rs  list_birthdays.rs  mod.rs  remove_birthday.rs
