[package]
name = "burthday-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = " 0.11.6" 
tokio = { version = "1", features = ["full"]}
dotenvy = "0.15.7"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "time", "chrono"] }
chrono = "0.4.31"
clokwerk = "0.4.0"
moka = { version = "0.12.0", features = ["sync"] }